Added syntax highlighting with Pygments and SASS.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,7 +6,7 @@
 <html>
   <head>
     <title>A Brand New nanoc Site - <%= @item[:title] %></title>
-    <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
   </head>
   <body>
     <div id="main">
