--- a/content/feeds/atom.xml.erb
+++ b/content/feeds/atom.xml.erb
@@ -1,8 +1,30 @@
 -----
-is_hidden:   "true"
-feed_url:    "http://alexvollmer.com/feeds/atom/"
-title:       "Recent posts @ alexvollmer.com"
-author_name: "Alex Vollmer"
-author_uri:  "http://alexvollmer.com/"
+title: posts @ alexvollmer.com
 -----
-<%= atom_feed(:articles => convert_items(articles)) %>
+<? xml encoding="utf-8" ?>
+<feed xmlns="http://www.w3.org/2005/Atom" xmlns:thr="http://purl.org/syndication/thread/1.0" xml:lang="en" xml:base="http://alexvollmer.com/">
+  <title type="text">posts @ alexvollmer.com</title>
+  <subtitle type="text">Optimistic reflections based on hard-won pessimism</subtitle>
+  <updated><%= format_rfc822_date(articles.first.created_at) %></updated>
+  <link rel="alternate" type="text/html" href="http://alexvollmer.com"/>
+  <id>http://alexvollmer.com/feed/atom/</id>
+  <link rel="self" type="application/atom+xml" href="http://alexvollmer.com/index.php/feed/atom/"/>
+<% articles.reverse[0..5].each do |post| %>
+  <entry>
+    <author>
+      <name>Alex Vollmer</name>
+      <uri>http://alexvollmer.com</uri>
+    </author>
+    <title type="html"><![CDATA[<%= post.title %>]]></title>
+    <link rel="alternate" type="text/html" href="http://alexvollmer.com/<%= post.full_path %>/"/>
+    <id>http://alexvollmer.com/<%= post.full_path %></id>
+    <updated><%= format_rfc822_date(post.mtime) %></updated>
+    <published><%= format_rfc822_date(post.created_at) %></published>
+<% post.tags.each do |tag| %>
+    <category scheme="http://alexvollmer.com" term="<%= tag %>"/>
+<% end %>
+    <summary type="html"><![CDATA[<%= include_post_summary(post) %>]]></summary>
+    <content type="html"><![CDATA[<%= include_post_body(post) %>]]></content>
+  </entry>
+<% end %>
+</feed>
