Fixed up missing image assets and associated CSS.

--- a/content/css/main.sass
+++ b/content/css/main.sass
@@ -30,7 +30,7 @@ a
 #head
   color: #ffd8bf
   background-color: black
-  background-image: url(header.png)
+  background-image: url(/images/header.png)
   background-repeat: no-repeat
   height: 109px
   padding: 10px
@@ -65,7 +65,7 @@ a
 
   ul li.hal
     color: #e0400b
-    background-image: url('hal.png')
+    background-image: url(/images/hal.png)
     background-repeat: no-repeat
     background-position: center 17px
 
@@ -90,7 +90,7 @@ a
 
 
 #feature1 .featured-link
-  background-image: url(feature1.png)
+  background-image: url(/images/feature1.png)
 
 
 .featured-link span
@@ -115,7 +115,7 @@ a
 h2
   color: #171717
   font-weight: normal
-  background-image: url(border.png)
+  background-image: url(/images/border.png)
   background-repeat: repeat-x
   background-position: bottom
   margin: 0 0 20px 0
@@ -192,14 +192,14 @@ li.status
 
 
 #footertrim
-  background-image: url(footer-trim.png)
+  background-image: url(/images/footer-trim.png)
   background-repeat: repeat-x
     height: 15px
   font-size: 5px
 
 
 #footer
-  background-image: url(footer-bg.png)
+  background-image: url(/images/footer-bg.png)
   background-repeat: repeat-x
   background-color: black
   padding: 20px 0 50px 0
