--- a/content/index.markdown.erb
+++ b/content/index.markdown.erb
@@ -1,4 +1,56 @@
------ 
-title: Home
------
-FOO BAR
+---
+title: alexvollmer.com
+layout: home
+---
+<div id="feature">
+  <ul>
+    <li id="feature1">
+      <a class="featured-link" href="#">
+        <span>Moochbot</span>
+      </a>
+    </li>
+    <li>
+      <a class="featured-link" href="#">
+        <span>Project Too</span>
+      </a>
+    </li>
+    <li class="last">
+      <a class="featured-link" href="#">
+        <span>Projecto Tres</span>
+      </a>
+    </li>
+  </ul>
+  <br class="clear"/>
+</div>
+<div id="blog">
+  <h2>Recent Posts</h2>
+<% articles.reverse[0...3].each do |post| %>
+  <div class="post">
+    <div class="postmeta">
+      <%= post.short_date %>
+    </div>
+    <div class="postbody">
+      <h4><a href="/posts/<%= post.full_path %>/"><%= post.title %></a></h4>
+      <p><%= include_post_summary(post) %></p>
+      <p><a href="/posts/<%= post.full_path %>/">Read More</a></p>
+    </div>
+  </div>
+<% end %>
+</div>
+<div id="else">
+  <div id="bookshelf">
+    <h2>Bookshelf</h2>
+    <p>The Elfish Gene</p>
+    <p>The Baseball Economist</p>
+  </div>
+  <div id="twats">
+    <h2><img src="/images/avatar-sm_bigger.jpg" alt="Hello">I'm <a href="http://twitter.com/alexvollmer">@alexvollmer</a> on twitter</h2>
+
+    <ul id="twitter_update_list"></ul>
+    <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
+    <script type="text/javascript" src="http://twitter.com/statuses/user_timeline/alexvollmer.json?callback=twitterCallback2&count=3"></script>
+    <p><a href="http://twitter.com/alexvollmer">Read More&hellip;</a></p>
+  </div>
+
+  <br class="clear"/>
+</div>
