Tags and by-date pages now with home layout.

--- a/layouts/home.html.erb
+++ b/layouts/home.html.erb
@@ -36,19 +36,11 @@
               <td>
                 <a href="#">Coding Horror</a> | 		
                 <a href="#">Loud Thinking</a> | 
-                <a href="#">Martin Fowler‚Äôs Bliki</a> | 
+                <a href="#">Martin Fowler's Bliki</a> | 
                 <a href="#">Nuby on Rails</a> | 
                 <a href="#">Reign of Error</a> | 
                 <a href="#">Technomancy</a> | 
                 <a href="#">User Primary Blog</a>				 
-              </td>
-            </tr>
-            <tr valign="top">
-              <th>Tags</th>
-              <td>
-                {% for tag in site.categories.keys %}
-                <a href="/tags/{{ tag }}/">{{ tag }}</a> | 
-                {% endfor %}
               </td>
             </tr>
             <tr valign="top">
