--- a/templates/items.html.erb
+++ b/templates/items.html.erb
@@ -1,8 +1,14 @@
-<%= @title %> | <%= @parent_link %>
-<ul>
-<% @items.each do |item| %>
-  <li>
-    <a href="<%= item.full_path %>"><%= item.title %></a> (<%= item.size %>)
-  </li>
-<% end %>
-</ul>
+<div id="items">
+  <h2>
+    <div class="title"><%= @title %></div>
+    <div class="backlink"><%= @parent_link || "&nbsp;" %></div>
+  </h2>
+  <ul>
+    <% @items.each do |item| %>
+    <li>
+      <a href="<%= item.full_path %>"><%= item.title %></a>
+      <abbr>(<%= item.size %>)</abbr>
+    </li>
+    <% end %>
+  </ul>
+</div>
