--- a/templates/posts.html.erb
+++ b/templates/posts.html.erb
@@ -1,9 +1,14 @@
-<%= @title %> | <%= @parent_link %>
-<ul>
-<% @posts.each do |post| %>
-  <li>
-    <a href="/posts/<%= post.full_path %>/"><%= post.title %></a>
-  (<%= post.display_date %>)
-  </li>
-<% end %>
-</ul>
+<div id="items">
+  <h2>
+    <div class="title"><%= @title %></div>
+    <div class="backlink"><%= @parent_link || "&nbsp;" %></div>
+  </h2>
+  <ul>
+    <% @posts.each do |post| %>
+    <li>
+      <a href="/posts/<%= post.full_path %>/"><%= post.title %></a>
+      <abbr>(<%= post.short_date %>)</abbr>
+    </li>
+    <% end %>
+  </ul>
+</div>
