Some SASS cleanup with variables.

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -4,6 +4,10 @@
 // Variables
 !red = #A4282D 
 !gray = #958C78
+!background = #DBD6CB
+!link_color = #028EFF
+!hover_color = #E0400B
+!tan = #FFD8BF
 
 // Mixins
 =default_border
