Footer is now pinned to the bottom.

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -9,6 +9,9 @@
 !hover_color = #E0400B
 !tan = #FFD8BF
 
+!footer_height = 150px
+!footertrim_height = 15px
+
 // Mixins
 =default_border
   border = 1px "dashed" !gray 
