--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -7,6 +7,8 @@
   padding: 0
   text-align: left
 
+html, body
+  height: 100%
 
 body
   background-color = !background
@@ -21,12 +23,23 @@ a
   &:hover
     color = !hover_color
 
+#wrap
+  margin: 0 auto
+  margin-bottom = -(!footer_height + !footertrim_height)
+  height: auto !important
+  height: 100%
+  min-height: 100%
+  position: relative
 
 #wrap, #footercontent
   width: 770px
-  padding: 20px
+
+#footercontent
+  padding: 10px
   margin: auto
 
+#shim
+  height: 20px
 
 #head
   color = !tan
@@ -186,7 +199,7 @@ h2
 
     a
       font-size: 12px
-      color: !gray 
+      color = !gray 
       display: block
 
     span a
@@ -200,19 +213,27 @@ h2
 #footertrim
   background-image: url(/images/footer-trim.png)
   background-repeat: repeat-x
-    height: 15px
+  height = !footertrim_height
   font-size: 5px
 
+#push
+  margin-top: 15px
+
+#footer, #push
+  height = !footer_height
+  clear: both
 
 #footer
   background-image: url(/images/footer-bg.png)
   background-repeat: repeat-x
   background-color: black
-  padding: 20px 0 50px 0
+  padding: 0
+  margin: 0 auto
+  width: 100%
   color: #795237
   font-size: 13px
   line-height: 140%
-
+  position: relative
 
 th
   width: 120px
