Light up the correct tab depending on the section of the site.

--- a/layouts/home.html.erb
+++ b/layouts/home.html.erb
@@ -20,9 +20,9 @@
       <div id="head">
         <h1><a href="/">Alex<br>Vollmer</a></h1>
         <ul id="nav">
-          <li class="hal">Blog</li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/contact/">Contact</a></li>
+          <%= blog_tab_link %>
+          <%= projects_tab_link %>
+          <%= contact_tab_link %>
         </ul>
         <br class="clear"/> <!-- replace with self clear -->
       </div>
