New and improved "projects" page, complete with GH integration.

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -96,15 +96,26 @@ img.right
 
 
 #feature ul
-  width: 100%
-  margin: 30px 0
+  margin-top: 20px
 
-  li
+  li.project
     float: left
     margin: 0 10px 0 0
     list-style-type: none
-    background-color: black
+    height: 100%
+    padding: 12px 0
 
+    a
+      font-family: "presicav-1","presicav-2"
+      font-size: 12px
+
+    ul, p
+      width: 245px
+
+    ul
+      li
+        margin: 5px
+        list-style-type: none
 
 .featured-link
   display: inline-block
@@ -113,10 +124,17 @@ img.right
   color: white
   font-family: "presicav-1","presicav-2"
 
+#github
+  background: url(/images/github.png) no-repeat top
 
-#feature1 .featured-link
-  background-image: url(/images/feature1.png)
+#peepcode
+  background: url(/images/peepcode.png) no-repeat top
 
+#moochbot
+  background: url(/images/moochbot.png) no-repeat top
+
+  p
+    margin-top: 20px
 
 .featured-link span
   display: block
