--- a/layouts/home.haml
+++ b/layouts/home.haml
@@ -12,6 +12,11 @@
     %link{ :href => "/css/ung0eni-standards.css", :rel => "stylesheet", :type => "text/css" }
     %script{ :type => "text/javascript" }
       try{Typekit.load();}catch(e){}
+
+    %script{ :type => "text/javascript", :src => "/js/jquery-1.4.1.min.js" }
+    %script{ :type => "text/javascript", :src => "/js/site.js" }
+
+
     %link{ :href => "/css/main.css", :rel => "stylesheet", :type => "text/css" }
     %link{ :rel => "alternate", :type => "application/rss+xml", :title => "RSS 2.0", :href => "http://alexvollmer.com/feeds/rss_2_0.xml" }
     %link{ :rel => "alternate", :type => "text/xml", :title => "RSS .92", :href => "http://alexvollmer.com/feeds/rss_0_9_2.xml" }
