First pass at the contact/about page.

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -93,6 +93,18 @@ img.right
 #feature ul
   margin-top: 20px
 
+  #github
+    background: url(/images/github.png) no-repeat top
+
+  #peepcode
+    background: url(/images/peepcode.png) no-repeat top
+
+  #moochbot
+    background: url(/images/moochbot.png) no-repeat top
+
+    p
+      margin-top: 20px
+
   li.project
     float: left
     margin: 0 10px 0 0
@@ -119,17 +131,6 @@ img.right
   color: white
   font-family: "presicav-1","presicav-2"
 
-#github
-  background: url(/images/github.png) no-repeat top
-
-#peepcode
-  background: url(/images/peepcode.png) no-repeat top
-
-#moochbot
-  background: url(/images/moochbot.png) no-repeat top
-
-  p
-    margin-top: 20px
 
 .featured-link span
   display: block
@@ -182,6 +183,26 @@ h2
   line-height: 35px
   font-family: "presicav-1","presicav-2"
 
+#about
+  margin: 50px 0
+
+  h3
+    font-family: "presicav-1","presicav-2"
+    font-weight: normal
+    color = !link_color
+    font-size: 18px
+    margin-top: 20px
+
+  .section
+    margin-bottom: 10px
+    
+    p
+      margin: 10px 0
+
+#linkedin, #twitter, #github
+  img
+    border: none
+    margin-bottom: -10px
 
 .postbody
   margin: 0 0 0 267px
