Put proper titles in for each page.

--- a/layouts/home.haml
+++ b/layouts/home.haml
@@ -5,7 +5,7 @@
   %head
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "content-type" }
     %title
-      Alex Vollmer dot com
+      = "Alex Vollmer &mdash; " + @item[:title]
     %script{ :type => "text/javascript", :src => "/js/ung0eni.js" }
     %style{ :type => "text/css" }
       \.tk-presicav{font-family:"presicav-1","presicav-2",sans-serif;}
