Fixes for "about" page, including mugshot

--- a/content/about/index.haml
+++ b/content/about/index.haml
@@ -3,8 +3,11 @@ title: About
 layout: home
 ---
 #about
+  #mugshot
+    %img{ :src => "/images/avatar-square.png" }
   %h2
     ABOUT ME
+
   .section
     %p
       Hi, my name is Alex Vollmer and I live in Seattle, WA.
