--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -199,6 +199,13 @@ h2
     p
       margin: 10px 0
 
+#mugshot
+  float: right
+  -webkit-box-shadow: 3px 3px 15px #888 
+  -webkit-transform: rotate(3deg)
+  border: 2px solid #fff
+  margin: -10px 0 20px 20px
+
 #linkedin, #twitter, #github
   img
     border: none
