--- a/layouts/_twitter.haml
+++ b/layouts/_twitter.haml
@@ -4,7 +4,7 @@
   When I'm not composing sprawling, pithy blog posts, I like
   to write the occasional tweet. Twitter is one of those things
   that became surprisingly essential to me. Who needs news?
-  Who need journalism? I've got 140 characters!
+  Who needs journalism? I've got 140 characters!
 %p
   See what I've written:
   %a{ :href => "http://www.twitter.com/alexvollmer" }
