WIP: Disqus integration

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -295,6 +295,12 @@ td
   h2
     margin-top: 18px
 
+  #comment_count
+    float: right
+    color = !gray
+    font-size: 14px
+    margin-top: 5px
+
   #tags
     color = !gray
     font-weight: bold
@@ -354,3 +360,11 @@ td
         font-style: italic
         color = !gray
 
+#disqus_thread_link
+  text-decoration: none
+  color = !link_color
+
+#disqus_thread
+  a:hover
+    text-decoration: none
+    color = !link_color
