Tweaked goodreads integration. Also on the home page now.

--- a/content/about/index.haml
+++ b/content/about/index.haml
@@ -38,4 +38,14 @@ layout: home
 
   .section#goodreads
     %h3 goodreads
-    = render "_goodreads"
+    %p
+      Guess who's a book-nerd? Me! My book queue is mile high and
+      growing by the day. I stick mostly to tech-stuff and history,
+      but occasionally branch out into fiction. I love getting
+      book recommendations so let me know if there's something
+      I just
+      %em have
+      to check out.
+    %p
+      See what I've been reading:
+    = render "_goodreads_read"
