--- a/content/css/_goodreads.sass
+++ b/content/css/_goodreads.sass
@@ -1,16 +1,25 @@
 -----
+
 -----
 
-#gr_grid_widget_1265903764
+#gr_grid_widget_1266033387, #gr_grid_widget_1266075997
   h2
     display: none
 
-.gr_grid_container
-  width: 400px
+  img
+    border: none
+    margin: 0
+    padding: 0
 
-.gr_grid_book_container
-  float: left
-  width: 39px
-  height: 60px
-  padding: 0px 0px
-  overflow: hidden
+  .gr_grid_container
+    width: 400px
+
+  .gr_grid_book_container
+    float: left
+    width: 39px
+    height: 60px
+    padding: 0px 0px
+    overflow: hidden
+
+  a.gr_grid_branding
+    display: none
