--- a/content/index.haml
+++ b/content/index.haml
@@ -22,10 +22,7 @@ layout: home
   #bookshelf
     %h2
       Bookshelf
-    %p
-      The Elfish Gene
-    %p
-      The Baseball Economist
+    = render "_goodreads"
   #twats
     %h2
       %img{ :src => "/images/avatar-sm_bigger.jpg", :alt => "Hello" }
