--- a/layouts/_goodreads_read.haml
+++ b/layouts/_goodreads_read.haml
@@ -1,13 +1,14 @@
 -----
+
 -----
-#gr_grid_widget_1266033387
+#gr_grid_widget_1266075997
+  %h2
+    %a{ :href => "http://www.goodreads.com/user/show/1377937-alex?utm_medium=api&amp;utm_source=grid_widget", :style => "text-decoration: none;" }
+      Alex's book montage
   .gr_grid_container
     .gr_grid_book_container
       %a{ :href => "http://www.goodreads.com/book/show/1607816.The_Elfish_Gene_Dungeons_Dragons_and_Growing_Up_Strange", :title => "The Elfish Gene: Dungeons, Dragons and Growing Up Strange" }
         %img{ :src => "http://photo.goodreads.com/books/1185811981s/1607816.jpg", :border => "0", :alt => "The Elfish Gene: Dungeons, Dragons and Growing Up Strange" }
-    .gr_grid_book_container
-      %a{ :href => "http://www.goodreads.com/book/show/205817.The_Baseball_Economist_The_Real_Game_Exposed", :title => "The Baseball Economist: The Real Game Exposed" }
-        %img{ :src => "http://photo.goodreads.com/books/1172676987s/205817.jpg", :border => "0", :alt => "The Baseball Economist: The Real Game Exposed" }
     %br{ :style => "clear: both" }
     %br
     %a.gr_grid_branding{ :href => "http://www.goodreads.com/user/show/1377937-alex", :style => "font-size: .9em; color: #382110; text-decoration: none; float: right; clear: both" }
@@ -21,4 +22,4 @@
       %a{ :href => "http://www.goodreads.com/group/" }
         book club
       on Goodreads.
-    %script{ :src => "http://www.goodreads.com/review/grid_widget/1377937.Currently%20reading:?cover_size=small&amp;num_books=5&amp;order=d&amp;shelf=currently-reading&amp;sort=date_added&amp;widget_id=1266033387", :type => "text/javascript", :charset => "utf-8" }
+    %script{ :src => "http://www.goodreads.com/review/grid_widget/1377937?cover_size=&amp;num_books=20&amp;order=&amp;shelf=&amp;sort=&amp;widget_id=1266075997", :type => "text/javascript", :charset => "utf-8" }
