--- a/layouts/home.haml
+++ b/layouts/home.haml
@@ -21,6 +21,9 @@
     %link{ :rel => "alternate", :type => "application/rss+xml", :title => "RSS 2.0", :href => "http://alexvollmer.com/feeds/rss_2_0.xml" }
     %link{ :rel => "alternate", :type => "text/xml", :title => "RSS .92", :href => "http://alexvollmer.com/feeds/rss_0_9_2.xml" }
     %link{ :rel => "alternate", :type => "application/atom+xml", :title => "Atom 0.3", :href => "http://alexvollmer.com/feeds/atom.xml" }
+    %script{ :type => "text/javascript" }
+      :plain
+        var disqus_developer = 1;
   %body
     #wrap
       #shim
