Goodreads css tweaks.

--- a/content/css/_goodreads.sass
+++ b/content/css/_goodreads.sass
@@ -14,9 +14,13 @@
   .gr_grid_container
     width: 400px
 
+    .gr_grid_branding
+      display: none
+
   .gr_grid_book_container
     float: left
     width: 39px
     height: 60px
     padding: 0px 0px
     overflow: hidden
+
