Rotated mugshot images by hand, not with Webkit goodies.

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -201,10 +201,9 @@ h2
 
 #mugshot
   float: right
-  -webkit-box-shadow: 3px 3px 15px #888 
-  -webkit-transform: rotate(3deg)
-  border: 2px solid #fff
   margin: -10px 0 20px 20px
+  img
+    border: none
 
 #linkedin, #twitter, #github
   img
@@ -240,10 +239,8 @@ h2
 
   h2 img
     float: right
-    border: 2px solid white
+    border: none
     margin: -10px 0 20px 20px
-    -webkit-transform: rotate(3deg)
-    -webkit-box-shadow: 3px 3px 15px #888
 
   ul li
     list-style-type: none
