--- a/content/index.haml
+++ b/content/index.haml
@@ -25,7 +25,7 @@ layout: home
     = render "_goodreads"
   #twats
     %h2
-      %img{ :src => "/images/avatar-sm_bigger.jpg", :alt => "Hello" }
+      %img{ :src => "/images/avatar-small.png", :alt => "Hello" }
       I'm
       %a{ :href => "http://twitter.com/alexvollmer" }
         @alexvollmer
