Yet more Disqus work. Not quite there yet.

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -359,9 +359,9 @@ td
 
 #disqus_thread_link
   text-decoration: none
-  color = !link_color
+  color = black
 
 #disqus_thread
   a:hover
     text-decoration: none
-    color = !link_color
+    color = black
