--- a/layouts/_disqus.haml
+++ b/layouts/_disqus.haml
@@ -1,9 +1,9 @@
 -----
 -----
 #disqus_thread
-%script{ :type => "text/javascript", :src => "http://disqus.com/forums/alexvollmer/embed.js" }
+%script{ :type => "text/javascript", :src => "http://disqus.com/forums/alexvollmersite/embed.js" }
 %noscript
-  %a{ :href => "http://disqus.com/forums/alexvollmer/?url=ref" }
+  %a{ :href => "http://disqus.com/forums/alexvollmersite/?url=ref" }
     View the discussion thread.
 %a.dsq-brlink{ :href => "http://disqus.com" }
   blog comments powered by
