--- a/layouts/_all_post_years.haml
+++ b/layouts/_all_post_years.haml
@@ -1,7 +1,4 @@
 -----
-created_at: 2010-01-31 08:12:05 -08:00
-permalink: /posts/
-title: Posts by year
 -----
 #items
   %h2
@@ -9,9 +6,9 @@ title: Posts by year
       All posts
     .backlink &nbsp;
   %ul
-    - post_years(@items).each do |year|
+    - @years.each do |year|
       %li
         %a{ :href => "/posts/#{year}/" }
           = year
         %abbr
-          = "(#{posts.size})"
+          = "(#{@site.article_count_for_year(year)})"
