--- a/layouts/_posts_by_month.haml
+++ b/layouts/_posts_by_month.haml
@@ -10,7 +10,7 @@
   %ul
     - posts_by_date(@year, @month).each do |post|
       %li
-        %a{ :href => "#{post.full_path}/" }
+        %a{ :href => "/posts/#{post.full_path}/" }
           = post.title
         %abbr
           = "(#{post.short_date})"
