--- a/layouts/post.haml
+++ b/layouts/post.haml
@@ -18,7 +18,7 @@
           \&nbsp;
     %br
     #content
-      = yield
+      ~ yield
 
   %a{ :name => "disqus_thread", :id => "disqus_thread_link" }
     = render "_disqus"
