More links to /tags/ and /posts/

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -150,7 +150,6 @@ img.right
 #blog
   margin: 50px 0 50px 0
 
-
 h2
   color: #171717
   font-weight: normal
@@ -167,6 +166,15 @@ h2
     font-weight: 300
     letter-spacing: 4px
     text-transform: uppercase
+
+    .right
+      float: right
+      a
+        font-size: 14px
+        text-transform: none
+        text-spacing: none
+        margin-left: 10px
+        color = !gray
 
 .post
   position: relative
@@ -288,6 +296,8 @@ td
     font-size: 11px
     line-height: 35px
     font-family: "presicav-1","presicav-2"
+    a
+      color = !gray
 
   h2
     margin-top: 18px
