Use new TypeKit font for body text.

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -17,3 +17,7 @@
 
 =code_font
   font-family: "Consolas", "Monaco", "Monospace"
+
+=text-font
+  font-family: "proxima-nova-1","proxima-nova-2"
+  font-size: 16px
