--- a/content/css/_flickr.sass
+++ b/content/css/_flickr.sass
@@ -1,8 +1,10 @@
 -----
 -----
+@import definitions
+
 #flickr_badge_source_txt
   padding: 0
-  font: 11px Arial, Helvetica, Sans serif
+  +text-font
   color: #666666
 
 
