--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -13,7 +13,7 @@ html, body
 body
   background-color = !background
   text-align: center
-  font-family: Helvetica, Arial, Sans-Serif
+  +text-font
 
 a
   text-decoration: none
@@ -255,7 +255,6 @@ h2
     margin: 0 0 10px 0
 
     a
-      font-size: 12px
       color = !gray 
       display: block
 
@@ -358,7 +357,7 @@ td
     text-align: right
 
   ul
-    font-size: 16px
+    font-size: 18px
     list-style: none
     li
       padding-bottom: 6px
