--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -17,6 +17,7 @@
 
 =code_font
   font-family: "Consolas", "Monaco", "Monospace"
+  font-size: 14px
 
 =text-font
   font-family: "proxima-nova-1","proxima-nova-2"
