Extracted pygments stylesheet out and updated to "native" look

--- a/content/css/_code.sass
+++ b/content/css/_code.sass
@@ -1,6 +1,7 @@
 ----- 
 ----- 
 @import definitions
+@import pygments
 
 code
   +code_font
@@ -17,42 +18,3 @@ code
   overflow: auto
   -moz-border-radius: 8px
   -webkit-border-radius: 8px
-
-  .hll
-    background-color: #ffffcc 
-
-  .c
-    color: #008000 
-
-  .err
-    border: 1px solid #FF0000 
-
-  .k, .ow,   .kc, .kd, .kn, .kp, .kr
-    color: #4fabe2
-
-  .cm
-    color: #008000 
-
-  .cp
-    color: #0000ff 
-
-  .c1, .cs
-    color: #008000 
-
-  .ge
-    font-style: italic 
-
-  .gh, .gp, .gs, .gu
-    font-weight: bold 
-
-  .kt
-    color: #2b91af 
-
-  .s
-    color: #a31515 
-
-  .nc
-    color: #2b91af 
-
-  .sb, .sc, .sd, .s2, .se, .sh, .si, .sx, .sr, .s1, .ss
-    color: #a82020
