--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -26,6 +26,9 @@ img
   border: 1px solid #ababab
   padding: 3px
 
+img.plain
+  border: none
+
 img.left
   margin: 7px 7px 7px 0
   float: left
@@ -144,8 +147,6 @@ img.right
 
 .clear
   clear: both
-
-
 
 #blog
   margin: 50px 0 50px 0
@@ -376,3 +377,14 @@ td
   a:hover
     text-decoration: none
     color = black
+
+a.attachment, a.attachment:hover
+  background: url(/images/file.png) no-repeat top left
+  padding-top: 42px
+  font-weight: bold
+  color = gray
+  font-size: 12px
+  float: right
+  margin: 18px
+  width: 160px
+  
