New post: "On Technical Presentations"

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -22,3 +22,6 @@
 =text-font
   font-family: "proxima-nova-1","proxima-nova-2"
   font-size: 16px
+
+=title-font
+  font-family: "presicav-1","presicav-2"
