Update typekit account and fonts

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -20,7 +20,8 @@
   font-size: 14px
 
 =text-font
-  font-family: "proxima-nova-1","proxima-nova-2"
+  #font-family: "gesta-1","gesta-2"
+  font-family: "ff-dagny-web-pro-1","ff-dagny-web-pro-2"
   font-size: 16px
 
 =title-font
