--- a/layouts/home.haml
+++ b/layouts/home.haml
@@ -6,10 +6,7 @@
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "content-type" }
     %title
       = "Alex Vollmer &mdash; " + @item[:title]
-    %script{ :type => "text/javascript", :src => "/js/ung0eni.js" }
-    %style{ :type => "text/css" }
-      \.tk-presicav{font-family:"presicav-1","presicav-2",sans-serif;}
-    %link{ :href => "/css/ung0eni-standards.css", :rel => "stylesheet", :type => "text/css" }
+    %script{ :type => "text/javascript", :src => "http://use.typekit.com/sbg0eqh.js" }
     %script{ :type => "text/javascript" }
       try{Typekit.load();}catch(e){}
 
