Text tweaks for iPhone/iPad

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -20,9 +20,8 @@
   font-size: 14px
 
 =text-font
-  #font-family: "gesta-1","gesta-2"
-  font-family: "ff-dagny-web-pro-1","ff-dagny-web-pro-2"
+  font-family: "ff-dagny-web-pro-1","ff-dagny-web-pro-2","Helvetica Neue","Helvetica",sans-serif
   font-size: 16px
 
 =title-font
-  font-family: "presicav-1","presicav-2"
+  font-family: "presicav-1","presicav-2","Helvetica Neue","Helvetica",sans-serif
