--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -66,7 +66,7 @@ img.right
     font-size: 33px
     line-height: 30px
     margin: 24px
-    font-family: "presicav-1","presicav-2"
+    +title-font
     font-weight: 200
 
   ul
@@ -81,7 +81,7 @@ img.right
       height: 50px
       text-transform: uppercase
       font-size: 12px
-      font-family: "presicav-1","presicav-2"
+      +title-font
 
   a
     color = !tan
@@ -119,7 +119,7 @@ img.right
     padding: 12px 0
 
     a
-      font-family: "presicav-1","presicav-2"
+      +title-font
       font-size: 12px
 
     ul, p
@@ -135,8 +135,7 @@ img.right
   width: 250px
   height: 100px
   color: white
-  font-family: "presicav-1","presicav-2"
-
+  +title-font
 
 .featured-link span
   display: block
@@ -161,8 +160,7 @@ h2
   background-repeat: repeat-x
   background-position: bottom
   margin: 0 0 20px 0
-  font-family: "presicav-1","presicav-2"
-
+  +title-font
 
 #blog 
   h2
@@ -193,13 +191,13 @@ h2
   font-weight: bold
   font-size: 11px
   line-height: 35px
-  font-family: "presicav-1","presicav-2"
+  +title-font
 
 #about
   margin: 50px 0
 
   h3
-    font-family: "presicav-1","presicav-2"
+    +title-font
     font-weight: normal
     color = !link_color
     font-size: 18px
@@ -226,7 +224,7 @@ h2
   margin: 0 0 0 267px
 
   h4
-    font-family: "presicav-1","presicav-2"
+    +title-font
     font-weight: normal
     color = !link_color
     font-size: 18px
@@ -274,7 +272,7 @@ h2
 th
   width: 120px
   color = !tan
-  font-family: "presicav-1","presicav-2"
+  +title-font
   text-transform: uppercase
   font-size: 12px
   font-weight: 400
@@ -300,7 +298,7 @@ td
     font-weight: bold
     font-size: 11px
     line-height: 35px
-    font-family: "presicav-1","presicav-2"
+    +title-font
     a
       color = !gray
 
@@ -318,7 +316,7 @@ td
     font-weight: bold
     font-size: 11px
     line-height: 35px
-    font-family: "presicav-1","presicav-2"
+    +title-font
     width = !std_width
     text-align: right
 
@@ -341,7 +339,7 @@ td
 
 
 #archive abbr
-  font-family: "presicav-1","presicav-2"
+  +title-font
   color = !gray
   font-weight: bold
   font-size: 11px
